fixed the white space at the bottom

--- a/style.css
+++ b/style.css
@@ -49,11 +49,10 @@
     background-image: url(images/background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    max-height: 1980px;
     width: 1140px;
+    height: 100%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20px;
     margin: 20px auto 0 auto;
 }
 
@@ -158,7 +157,7 @@ h3 {
 
 .bottom {
     position: relative;
-    margin-top: 165px;
+    margin-top: 300px; 
     background-color: rgba(255, 225, 225, 0.15);
     text-align: right;
     max-height: 100px;
